# dot_vox_amethyst

./: .travis.yml  Cargo.toml  LICENSE  README.md
examples/: renderer.rs
resources/: display_config.ron
src/: dot_vox_format.rs  lib.rs  main.rs  renderer.rs  state.rs
src/components/: mod.rs  name.rs
src/shaders/fragment/: flat.glsl
src/shaders/vertex/: basic.glsl
src/systems/: mod.rs  rotate.rs
