[package]
name = "dot_vox_amethyst"
version = "0.1.0"
authors = ["David Edmonds <edmonds.d.r@gmail.com>"]
description = "A Rust library for importing and rendering MagicaVoxel .vox files in Amethyst.rs"
license = "MIT"
keywords = ['voxel', 'MagicaVoxel', 'game', 'game-dev', 'amethyst']
documentation = "https://docs.rs/dot_vox_amethyst"
homepage = "https://docs.rs/dot_vox_amethyst"
repository = "https://github.com/davidedmonds/dot_vox_amethyst"
readme = "README.md"

[dependencies]
amethyst = "^0.8.0"
derivative = "^1.0.0"
dot_vox = "^3.0.0"
glsl-layout = "0.1.1"
gfx_core = "0.8.2"
lazy_static = "^1.1.0"
log = "^0.4.0"

[dev-dependencies]
avow = "^0.2"